openecomp-be/lib/openecomp-tosca-lib/src/test/resources/vspmanager.csar/manifest/invalid/no-metadata.mf


Source: MainServiceTemplate.yaml

Source: Definitions/GlobalSubstitutionTypesServiceTemplate.yaml

Source: Artifacts/install.sh

Source: Artifacts/create_stack.sh

Source: Licenses/license.xml
